--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,10 @@
             <div class="absolute z-20 bg-black w-full h-full bg-opacity-60">
                 <div class="absolute flex flex-col gap-24 left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2">
                     <section class="text-neutral-300 text-center text-2xl">
-                        <h1 class="shadow-2xl lg:text-5xl">Selamat datang di loundry Klin8</h1>
+                        <h1 class="shadow-2xl lg:text-8xl">Selamat datang di loundry Klin8</h1>
 
                     </section>
-                    <div class="mx-auto lg:text-2xl">
+                    <div class="mx-auto lg:text-4xl">
                         <a href="#"
                             class="text-white bg-primary hover:bg-secondary px-7 py-3 rounded-full">Selengkapnya</a>
                     </div>
@@ -171,7 +171,7 @@
                 <div class="flex flex-col absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 text-center">
                     <div>
                         <h1 class="uppercase font-extrabold text-3xl sm:text-4xl lg:text-8xl">Our Priority</h1>
-                        <hr class="border-[1.5px] border-primary w-1/3 sm:w-2/4 mx-auto mt-3">
+                        <hr class="border-[1.5px] border-primary w-1/3 sm:w-2/4 lg:w-2/3 mx-auto mt-3">
                     </div>
 
                     <div class="flex justify-center gap-5 lg:gap-14 mt-5 lg:mt-20 sm:mt-10">
